# kittens

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
app/: Dockerfile  db.json  pyproject.toml
app/project/: production_settings.py  settings.py  urls.py
app/v1/: schema.py  urls.py
app/v1/models/: kitten.py
app/v1/serializers/: breed.py
app/v1/views/: breed.py  kitten.py  rating.py
kitten/: admin.py  models.py  schema.py  urls.py
kitten/migrations/: 0001_initial.py
kitten/models/: kitten.py  rating.py
kitten/serializers/: breed.py  kitten.py  rating.py
kitten/views/: breed.py  kitten.py  rating.py
project/: local_settings.py  production_settings.py  settings.py  urls.py
v1/: admin.py  urls.py
v1/migrations/: 0001_initial.py
v1/models/: breed.py
v1/serializers/: kitten.py  rating.py
v1/views/: kitten.py  rating.py
